; ModuleID = '/home/carl/AnghaBench/xLua/build/luasocket/extr_options.c_opt_get_linger.c'
source_filename = "/home/carl/AnghaBench/xLua/build/luasocket/extr_options.c_opt_get_linger.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.linger = type { i32, i32 }

@SOL_SOCKET = common dso_local global i32 0, align 4
@SO_LINGER = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [3 x i8] c"on\00", align 1
@.str.1 = private unnamed_addr constant [8 x i8] c"timeout\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @opt_get_linger(i32* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.linger, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 8, i32* %7, align 4
  %9 = load i32*, i32** %4, align 8
  %10 = load i32, i32* %5, align 4
  %11 = load i32, i32* @SOL_SOCKET, align 4
  %12 = load i32, i32* @SO_LINGER, align 4
  %13 = bitcast %struct.linger* %6 to i8*
  %14 = call i32 @opt_get(i32* %9, i32 %10, i32 %11, i32 %12, i8* %13, i32* %7)
  store i32 %14, i32* %8, align 4
  %15 = load i32, i32* %8, align 4
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %17, label %19

17:                                               ; preds = %2
  %18 = load i32, i32* %8, align 4
  store i32 %18, i32* %3, align 4
  br label %34

19:                                               ; preds = %2
  %20 = load i32*, i32** %4, align 8
  %21 = call i32 @lua_newtable(i32* %20)
  %22 = load i32*, i32** %4, align 8
  %23 = getelementptr inbounds %struct.linger, %struct.linger* %6, i32 0, i32 1
  %24 = load i32, i32* %23, align 4
  %25 = call i32 @lua_pushboolean(i32* %22, i32 %24)
  %26 = load i32*, i32** %4, align 8
  %27 = call i32 @lua_setfield(i32* %26, i32 -2, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0))
  %28 = load i32*, i32** %4, align 8
  %29 = getelementptr inbounds %struct.linger, %struct.linger* %6, i32 0, i32 0
  %30 = load i32, i32* %29, align 4
  %31 = call i32 @lua_pushinteger(i32* %28, i32 %30)
  %32 = load i32*, i32** %4, align 8
  %33 = call i32 @lua_setfield(i32* %32, i32 -2, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.1, i64 0, i64 0))
  store i32 1, i32* %3, align 4
  br label %34

34:                                               ; preds = %19, %17
  %35 = load i32, i32* %3, align 4
  ret i32 %35
}

declare dso_local i32 @opt_get(i32*, i32, i32, i32, i8*, i32*) #1

declare dso_local i32 @lua_newtable(i32*) #1

declare dso_local i32 @lua_pushboolean(i32*, i32) #1

declare dso_local i32 @lua_setfield(i32*, i32, i8*) #1

declare dso_local i32 @lua_pushinteger(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
